--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,3 +24,10 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: soundreload
+        path: |
+          build/libs/soundreload-*.jar
+          !build/libs/soundreload-*-sources.jar
+        if-no-files-found: error
